--- a/RestaurantApplication/Restaurant.Services.CouponAPI/appsettings.json
+++ b/RestaurantApplication/Restaurant.Services.CouponAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Restaurant_Coupon;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
