--- a/RestaurantApplication/Restaurant.Services.AuthAPI/appsettings.json
+++ b/RestaurantApplication/Restaurant.Services.AuthAPI/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=Restaurant_Auth;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+      "Issuer": "restaurant-auth-api",
+      "Audience": "restaurant-client"
+    }
+  },
   "AllowedHosts": "*"
 }
