--- a/RestaurantApplication/Restaurant.Services.CouponAPI/appsettings.json
+++ b/RestaurantApplication/Restaurant.Services.CouponAPI/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=Restaurant_Coupon;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+    "Issuer": "restaurant-auth-api",
+    "Audience": "restaurant-client"
+
+  },
   "AllowedHosts": "*"
 }
