--- a/RestaurantApplication/Restaurant.Services.ProductAPI/appsettings.json
+++ b/RestaurantApplication/Restaurant.Services.ProductAPI/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Restaurant_Product;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+    "Issuer": "restaurant-auth-api",
+    "Audience": "restaurant-client"
+
+  },
   "AllowedHosts": "*"
 }
